--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "@apollo/client": "^3.5.6",
+        "@rollup/plugin-replace": "^3.0.1",
+        "dotenv": "^10.0.0",
         "eslint": "^8.5.0",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-sonarjs": "^0.11.0",
