--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "rollup-plugin-livereload": "^2.0.0",
         "rollup-plugin-svelte": "^7.0.0",
         "rollup-plugin-terser": "^7.0.0",
-        "svelte": "^3.0.0"
+        "svelte": "^3.0.0",
+        "svelte-loading-spinners": "^0.1.7",
+        "svelte-simple-modal": "^1.2.0"
     },
     "dependencies": {
         "@apollo/client": "^3.5.6",
