added online/offline check

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "prettier": "^2.5.1",
         "sirv-cli": "^1.0.0",
         "subscriptions-transport-ws": "^0.11.0",
-        "svelte-apollo": "^0.4.0"
+        "svelte-apollo": "^0.4.0",
+        "svelte-store": "^0.0.2"
     }
 }
