--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "sirv-cli": "^1.0.0",
         "subscriptions-transport-ws": "^0.11.0",
         "svelte-apollo": "^0.4.0",
+        "svelte-notifications": "^0.9.93",
         "svelte-store": "^0.0.2"
     }
 }
